[project]
name = "online-store-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Rustem Umerov",email = "rustem.umerov.00@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = ["tests"]
python_paths = ["src", "models"]

addopts = [
    "--cov=src",
    "--cov=models",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]

[tool.coverage.run]
omit = [
    "src/main.py"
]

[tool.coverage.report]
show_missing = true

[tool.coverage.paths]
source = ["src", "models"]



[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"
flake8 = "^7.3.0"
isort = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'
